# parsed-vhdl-domain

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: doc.yml
docs/: Makefile  requirements.txt
docs/source/: .gitignore  GPIO.vhd  api.rst  conf.py  home.rst  index.rst
docs/source/_templates/: custom-class-template.rst  custom-module-template.rst
parsed_vhdl_domain/: __init__.py  vhdl_domain.py  vhdl_parser.py  xelement.py
vhdl_sphinx_domain/: __init__.py  ansi.py  doc_utils.py  remap.yaml  vhdl.css  vhdl_domain.py  vhdl_parser.py  xelement.py
