[build-system]
    requires = [
        "setuptools>=64", # >=64 required for setuptools-scm
        "setuptools-scm>=8.0", # automatically manages version number from git
        "wheel"
        ]
    build-backend = "setuptools.build_meta"

[project]
    name = "vhdl-sphinx-domain"
    description = "Sphinx domain for VHDL"
    dynamic=["version"]
    authors = [
        { name = "JF Cliche", email = "vhdl@jfcliche.com" }
        ]
    dependencies = [
        "setuptools>=64", # required by setuptools-scm
        "setuptools-scm>=8.0",
        "sphinx",
        "sphinx_rtd_theme",
        "sphinxcontrib.restbuilder",  # used for debugging output
        "vsg @ git+https://github.com/jfcliche/vhdl-style-guide.git@38bcc20171f2d65c01188e56a275e7f20caa9683"
        ]

[tool.setuptools.package-data]
    vhdl_sphinx_domain = [
        "*.css",
        ".nojekyll"
        ]

[tool.setuptools_scm]
version_file = "vhdl_sphinx_domain/_version.py"

