[build-system]
    requires = [
        "setuptools>=64", # >=64 required for setuptools-scm
        "setuptools-scm>=8.0", # automatically manages version number from git
        "wheel"
        ]
    build-backend = "setuptools.build_meta"

[project]
    name = "vhdl-sphinx-domain"
    description = "Sphinx domain for VHDL"
    dynamic=["version"]
    authors = [
        { name = "JF Cliche", email = "vhdl@jfcliche.com" }
        ]
    dependencies = [
        "setuptools>=64", # required by setuptools-scm
        "setuptools-scm>=8.0",
        "sphinx",
        "sphinx_rtd_theme",
        "sphinxcontrib.restbuilder",  # used for debugging output
        "vsg @ git+https://github.com/jfcliche/vhdl-style-guide.git@2748e3a29385fd925b708570c0d13e34c162c3cd"
        ]

[tool.setuptools.package-data]
    vhdl_sphinx_domain = [
        "*.css",
        ".nojekyll"
        ]

[tool.setuptools_scm]
version_file = "vhdl_sphinx_domain/_version.py"

