[metadata]
name = parsed-vhdl-domain
version = 0.1.0
author = JF Cliche
author_email = vhdl@jfcliche.com
description = A Sphinx domain that parses VHDL source code to extract documentation
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Documentation :: Sphinx
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License

[options]
#package_dir =
#    = src
packages = find:
python_requires = >=3.6
install_requires =
#    vhdl-style-guide >=3.21
    vsg @ git+https://github.com/jfcliche/vhdl-style-guide.git@48a0b70
#[options.packages.find]
#where = src